make sure 'go to species' button is always visible

--- a/goorchids/core/static/css/app.css
+++ b/goorchids/core/static/css/app.css
@@ -2318,6 +2318,9 @@ body.taxa #sb-title-inner a {
   line-height: 1.4;
   padding: 0 0 15px;
 }
+#plant-detail-modal .details .characteristics {
+  margin-bottom: 6em;
+}
 #plant-detail-modal .details .button, #plant-detail-modal .details .skey .sidebar .section .get-choices, .skey .sidebar .section #plant-detail-modal .details .get-choices,
 #plant-detail-modal .details .skey .sidebar .section .clear-all-btn,
 .skey .sidebar .section #plant-detail-modal .details .clear-all-btn,
@@ -2328,6 +2331,25 @@ body.taxa #sb-title-inner a {
   line-height: 1;
   margin: 15px 0 0;
   padding: 10px 40px;
+  position: fixed;
+  bottom: 60px;
+  z-index: 2;
+}
+#plant-detail-modal .details:after {
+  content: "";
+  height: 9em;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(40%, white));
+  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
+  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
+  background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
+  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
+  background-image: linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
+  position: absolute;
+  bottom: 0;
+  display: block;
+  z-index: 1;
 }
 
 .modal-wrap {
